# stained

./: Cargo.toml  LICENSE  README.md
examples/: autoplay.rs
src/: agent.rs  api.rs  board.rs  color.rs  constants.rs  game.rs  game_state.rs  lib.rs  objective.rs  template.rs  tool.rs  turn.rs
