[package]
name = "stained"
version = "0.1.10"
authors = ["CJ Carey <perimosocordiae@gmail.com>"]
edition = "2024"

[lib]
name = "stained"

[dependencies]
blau_api = { git = "https://github.com/perimosocordiae/blau_api" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
